--- a/config/example_options.ini
+++ b/config/example_options.ini
@@ -21,7 +21,7 @@
 # Find your bot's token here: https://discordapp.com/developers/applications/me/
 # Create a new application, with no redirect URI or boxes ticked.
 # Then click 'Create Bot User' on the application page and copy the token here.
-Token = bot_token
+Token = vPlItCmKatW4JDdhNmhUawOozIYDB4PK
 
 # The bot supports converting Spotify links and URIs to YouTube videos and
 # playing them. To enable this feature, please fill in these two options with valid
@@ -64,7 +64,7 @@ AllowUnboundServers = no
 # of the voice channels you would like the bot to join on startup, seperated by a
 # space. Each server can have one channel. If this option and AutoSummon are
 # enabled, this option will take priority.
-AutojoinChannels =
+AutojoinChannels = Music
 
 [MusicBot]
 # The volume of the bot, between 0.01 and 1.0.
